Fixes #4804 - UI: Broken line break and spacing issue in table managing SSL certificates.

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -429,6 +429,23 @@ ul {
   }
 }
 
+.u-breakNormal.u-breakNormal {
+  word-break: normal;
+
+  @supports (overflow-wrap: normal) {
+    overflow-wrap: normal;
+  }
+}
+
+.u-breakWords.u-breakWords {
+  word-break: break-word;
+
+  @supports (overflow-wrap: break-word) {
+    overflow-wrap: break-word;
+    word-break: unset;
+  }
+}
+
 .zIndex-1 {
   z-index: 100;
 }
